--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:url" content="https://pokeboa.com">
     <meta property="og:title" content="Poké Boa - Restaurant de poké bowls à Poissy">
     <meta property="og:description" content="Délicieux poké bowls frais et savoureux. Compositions hawaïennes sur mesure à Poissy.">
-    <meta property="og:image" content="logo.jpg">
+    <meta property="og:image" content="og_logo.jpg">
 
     <title>Poké Boa - Restaurant de poké bowls à Poissy</title>
     
