--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
     <meta property="og:url" content="https://pokeboa.com">
     <meta property="og:title" content="Poké Boa - Restaurant de poké bowls à Poissy">
     <meta property="og:description" content="Délicieux poké bowls frais et savoureux. Compositions hawaïennes sur mesure à Poissy.">
-    <meta property="og:image" content="og_logo.jpg">
+    <meta property="og:image" content="https://pokeboa.com/og_logo.jpg">
+	
+	<!-- Twitter Meta Tags -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta property="twitter:domain" content="pokeboa.com">
+	<meta property="twitter:url" content="https://pokeboa.com">
+	<meta name="twitter:title" content="Poké Boa - Restaurant de poké bowls à Poissy">
+	<meta name="twitter:description" content="Délicieux poké bowls frais et savoureux. Compositions hawaïennes sur mesure à Poissy.">
+	<meta name="twitter:image" content="https://pokeboa.com/og_logo.jpg">
 
     <title>Poké Boa - Restaurant de poké bowls à Poissy</title>
     
