--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <div class="coming-soon">Ouverture Prochaine</div>
     <div class="container">
         <header>
-            <img src="https://cdn.pokeboa.com/image/logo/horizontal/500w/poke-boa.png alt="Logo Poké Boa" class="logo">
+            <img src="https://cdn.pokeboa.com/image/logo/horizontal/500w/poke-boa.png" alt="Logo Poké Boa" class="logo">
             <h1>POKÉ BOA</h1>
             <p class="tagline">Savourez l'authenticité hawaïenne à Poissy</p>
         </header>
