--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:url" content="https://pokeboa.com">
     <meta property="og:title" content="Poké Boa - Restaurant de poké bowls à Poissy">
     <meta property="og:description" content="Délicieux poké bowls frais et savoureux. Compositions hawaïennes sur mesure à Poissy.">
-    <meta property="og:image" content="https://pokeboa.com/og_logo.jpg">
+    <meta property="og:image" content="https://pokeboa.com/og_logo.png">
 	
 	<!-- Twitter Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
@@ -19,7 +19,7 @@
 	<meta property="twitter:url" content="https://pokeboa.com">
 	<meta name="twitter:title" content="Poké Boa - Restaurant de poké bowls à Poissy">
 	<meta name="twitter:description" content="Délicieux poké bowls frais et savoureux. Compositions hawaïennes sur mesure à Poissy.">
-	<meta name="twitter:image" content="https://pokeboa.com/og_logo.jpg">
+	<meta name="twitter:image" content="https://pokeboa.com/og_logo.png">
 
     <title>Poké Boa - Restaurant de poké bowls à Poissy</title>
     
@@ -177,7 +177,7 @@
     <div class="coming-soon">Ouverture Prochaine</div>
     <div class="container">
         <header>
-            <img src="https://cdn.pokeboa.com/image/logo/horizontal/500w/poke-boa.png" alt="Logo Poké Boa" class="logo">
+            <img src="https://cdn.pokeboa.com/image/logo/horizontal/transparent/500w/poke-boa.png" alt="Logo Poké Boa" class="logo">
             <h1>POKÉ BOA</h1>
             <p class="tagline">Savourez l'authenticité hawaïenne à Poissy</p>
         </header>
