--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <p class="description">
                 Bienvenue chez Poké Boa, votre nouvelle destination gourmande à Poissy pour des poké bowls frais, sains et délicieux. Notre concept unique associe les saveurs traditionnelles hawaïennes à une touche créative qui ravira vos papilles.
             </p>
-            <a href="menu.png" class="cta-button">DÉCOUVRIR NOTRE CARTE</a>
+            <a href="menu.png" class="cta-button" target="_blank">DÉCOUVRIR NOTRE CARTE</a>
             <a href="#" class="cta-button">COMMANDER EN LIGNE (A VENIR)</a>
         </section>
         
