--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         }
         
         body {
-            background-color: #0f2747;
+            background-color: #1E2746;
             color: #ffffff;
             line-height: 1.6;
         }
@@ -52,7 +52,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-bottom: 50px;
+            margin-bottom: 10px;
         }
         
         .logo {
