--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         }
         
         body {
-            background-color: #1E2746;
+            background-color: #0f2747;
             color: #ffffff;
             line-height: 1.6;
         }
