--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             
             <div class="info-box">
                 <h3><i class="far fa-clock"></i> HORAIRES</h3>
-                <p>Lundi - Dimanche<br>11h30 - 14h<br>18h30 - 22h30</p>
+                <p>Tous les jours !<br>11h30 - 14h<br>18h30 - 22h30</p>
             </div>
             
             <div class="info-box">
