hide social links

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </section>
         
         <footer>
-            <div class="social-links">
+            <div class="social-links" style="display:none">
                 <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
                 <a href="#"><i class="fab fa-tiktok"></i></a>
