--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
             <p class="description">
                 Bienvenue chez Poké Boa, votre nouvelle destination gourmande à Poissy pour des poké bowls frais, sains et délicieux. Notre concept unique associe les saveurs traditionnelles hawaïennes à une touche créative qui ravira vos papilles.
             </p>
+            <a href="https://poke-boa.marketplace.dood.com/fr/shops/poke-bowl/poke-boa" class="cta-button" target="_blank">COMMANDER EN DIRECT</a>
             <a href="https://deliveroo.fr/fr/menu/paris/poissy/pokeboa-14-rue-de-la-gare" class="cta-button" target="_blank">COMMANDER SUR DELIVEROO</a>
             <a href="https://www.ubereats.com/fr/store/pokeboa/mZykcx0MXmqgXuPijydJeA" class="cta-button" target="_blank">COMMANDER SUR UBER EATS</a>
             <a href="menu.png" class="cta-button" target="_blank">DÉCOUVRIR NOTRE CARTE</a>
@@ -210,7 +211,7 @@
             
             <div class="info-box">
                 <h3><i class="fas fa-phone-alt"></i> CONTACT</h3>
-                <p>Téléphone: <a href="+33183439836">01 83 43 98 36</a><br>Email: <a href="mailto:bonjour@pokeboa.com">bonjour@pokeboa.com</a></p>
+                <p>Téléphone: <a href="tel:+33183439836">01 83 43 98 36</a><br>Email: <a href="mailto:bonjour@pokeboa.com">bonjour@pokeboa.com</a></p>
             </div>
         </section>
         
