--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <p class="description">
                 Bienvenue chez Poké Boa, votre nouvelle destination gourmande à Poissy pour des poké bowls frais, sains et délicieux. Notre concept unique associe les saveurs traditionnelles hawaïennes à une touche créative qui ravira vos papilles.
             </p>
-            <a href="https://poke-boa.marketplace.dood.com/fr/shops/poke-bowl/poke-boa" class="cta-button" target="_blank">COMMANDER EN DIRECT</a>
+            <!--<a href="https://poke-boa.marketplace.dood.com/fr/shops/poke-bowl/poke-boa" class="cta-button" target="_blank">COMMANDER EN DIRECT</a>-->
             <a href="https://deliveroo.fr/fr/menu/paris/poissy/pokeboa-14-rue-de-la-gare" class="cta-button" target="_blank">COMMANDER SUR DELIVEROO</a>
             <a href="https://www.ubereats.com/fr/store/pokeboa/mZykcx0MXmqgXuPijydJeA" class="cta-button" target="_blank">COMMANDER SUR UBER EATS</a>
             <a href="menu.png" class="cta-button" target="_blank">DÉCOUVRIR NOTRE CARTE</a>
