--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
         <footer>
             <div class="social-links" style="display:none">
                 <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-tiktok"></i></a>
+                <a href="https://www.instagram.com/poke_boa"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.tiktok.com/@pok.bowl0"><i class="fab fa-tiktok"></i></a>
             </div>
             <p>&copy; 2025 Poké Boa - Tous droits réservés</p>
         </footer>
