--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         </section>
         
         <footer>
-            <div class="social-links" style="display:none">
+            <div class="social-links">
                 <a href="https://www.facebook.com/people/Pok%C3%A9-Boa/61576683283390/"><i class="fab fa-facebook"></i></a>
                 <a href="https://www.instagram.com/poke_boa"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.tiktok.com/@pok.bowl0"><i class="fab fa-tiktok"></i></a>
