--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <p class="reviews-subtitle">Découvrez ce que pensent nos clients de PokeBoa</p>
                 
                 <div class="overall-rating">
-                    <div class="rating-score">4.8</div>
+                    <div class="rating-score">5/5</div>
                     <div>
                         <div class="stars">
                             <span class="star">★</span>
@@ -89,7 +89,7 @@
                             <span class="star">★</span>
                         </div>
                         <div class="rating-info">
-                            <div class="rating-count">Basé sur 127 avis vérifiés</div>
+                            <div class="rating-count">Basé sur 30 avis vérifiés</div>
                         </div>
                     </div>
                 </div>
