--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <span class="star">★</span>
                         </div>
                         <div class="rating-info">
-                            <div class="rating-count">Basé sur 30 avis vérifiés</div>
+                            <div class="rating-count">Basé sur 30 avis Google vérifiés</div>
                         </div>
                     </div>
                 </div>
