--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <section class="info-section">
             <div class="info-box">
                 <h3><i class="fas fa-map-marker-alt"></i> NOUS TROUVER</h3>
-                <p><a href="https://maps.google.com/?q=14%20Rue%20de%20la%20Gare%20-%2078300%20Poissy">14 Rue de la Gare<br>78300 Poissy</a></p>
+                <p><a href="https://maps.google.com/?q=14%20Rue%20de%20la%20Gare%20-%2078300%20Poissy" target="_blank">14 Rue de la Gare<br>78300 Poissy</a></p>
             </div>
             
             <div class="info-box">
