--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Social -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://pokeboa.com">
-    <meta property="og:title" content="Poké Boa - Restaurant de poké bowls à Poissy">
+    <meta property="og:title" content="Poke Boa - Restaurant de poké bowls à Poissy">
     <meta property="og:description" content="Délicieux poké bowls frais et savoureux. Compositions hawaïennes sur mesure à Poissy.">
     <meta property="og:image" content="https://pokeboa.com/og_logo.png">
 
@@ -19,7 +19,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="pokeboa.com">
     <meta property="twitter:url" content="https://pokeboa.com">
-    <meta name="twitter:title" content="Poké Boa - Restaurant de poké bowls à Poissy">
+    <meta name="twitter:title" content="Poke Boa - Restaurant de poké bowls à Poissy">
     <meta name="twitter:description" content="Délicieux poké bowls frais et savoureux. Compositions hawaïennes sur mesure à Poissy.">
     <meta name="twitter:image" content="https://pokeboa.com/og_logo.png">
     
