--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.pokeboa.com/image/favicon/32x32/square/color/poke-boa.png">
     <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.pokeboa.com/image/favicon/16x16/circle/color/poke-boa.png">-->
     
-    <link href="style.css" rel="stylesheet">
+    <link href="style.css?v=1" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -173,6 +173,6 @@
         </footer>
     </div>
 
-    <script src="script.js" type="text/javascript"></script>
+    <script src="script.js?v=1" type="text/javascript"></script>
 </body>
 </html>
