--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav id="navbar" class="navbar">
+    <nav id="navbar" class="navbar scrolled">
         <div class="nav-container">
             <div class="nav-logo">
                 <a href="/">
-                    <img src="https://cdn.pokeboa.com/image/logo/horizontal/white/500w/poke-boa.png" alt="Poke Boa" style="width:100px;vertical-align: middle;">
+                    <img src="https://cdn.pokeboa.com/image/logo/horizontal/white/500w/poke-boa.png" alt="Poke Boa">
                 </a>
             </div>
 
@@ -54,7 +54,7 @@
             <div class="nav-buttons">
                 <a href="https://poke-boa.marketplace.dood.com/fr/shops/poke-bowl/poke-boa" class="cta-button">
                     <span>🥗</span>
-                    Commander
+                    COMMANDER
                 </a>
             </div>
 
