--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
             
             <div id="opening-hours" class="info-box">
                 <h3><i class="far fa-clock"></i> HORAIRES</h3>
-                <p>Lundi-Vendredi<br>11h30 - 14h30 || 18h30 - 22h30</p>
+                <p>Lundi-Vendredi<br>11h30 - 14h30 | 18h30 - 22h30</p>
                 <br>
-                <p>Samedi-Dimanche<br>11h30 - 15h00 || 18h30 - 22h30</p>
+                <p>Samedi-Dimanche<br>11h30 - 15h00 | 18h30 - 22h30</p>
             </div>
             
             <div id="contact" class="info-box">
