--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <a href="/">
-                    <img src="https://cdn.pokeboa.com/image/logo/horizontal/white/500w/poke-boa.png" alt="Poke Boa">
+                    <img src="https://cdn.pokeboa.com/image/logo/horizontal/white/500w/poke-boa.png" alt="Logo de Poke Boa">
                 </a>
             </div>
 
             <ul class="nav-menu">
-                <li><a href="menu.png" class="nav-link" target="_blank">Carte</a></li>
+                <li><a href="#menu" class="nav-link">Carte</a></li>
                 <li><a href="#localisation" class="nav-link">Restaurant</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
@@ -109,6 +109,12 @@
                 <h3><i class="fas fa-phone-alt"></i> CONTACT</h3>
                 <p>Téléphone: <a href="tel:+33183439836">01 83 43 98 36</a><br>Email: <a href="mailto:bonjour@pokeboa.com">bonjour@pokeboa.com</a></p>
             </div>
+        </section>
+        
+        <section id="menu" class="menu-section">
+            <a href="menu.png" target="_blank">
+                <img src="menu.png" alt="Carte de Poke Boa">
+            </a>
         </section>
         
         <section class="reviews-section">
