--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <div class="container">
         <header>
-            <h1>POKE BOA</h1>
+            <h1>POKE BOA Poissy</h1>
             <p class="tagline">Savourez l'authenticité hawaïenne à Poissy</p>
         </header>
         
