--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta name="description" content="Restaurant PokeBoa de poké bowls frais et savoureux à Poissy. Découvrez nos compositions hawaïennes, saines et délicieuses.">
     <meta name="keywords" content="pokeboa, poké bowl, Poissy, restaurant, livraison, à emporter, healthy food, cuisine hawaïenne, poisson frais">
     
-    <!--<meta http-equiv="refresh" content="0;https://poke-boa.marketplace.dood.com/fr/shops/poke-bowl/poke-boa">-->
-    
     <!-- Social -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://pokeboa.com">
@@ -41,7 +39,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <a href="/">
-                    <img src="https://cdn.pokeboa.com/image/logo/horizontal/white/500w/poke-boa.png" alt="Logo de Poke Boa">
+                    <img src="https://cdn.pokeboa.com/image/logo/horizontal/transparent/poke-boa.svg" alt="Logo de Poke Boa">
                 </a>
             </div>
 
