--- a/index.html
+++ b/index.html
@@ -178,6 +178,14 @@
             </div>
             <p>&copy; 2025 Poke Boa - Tous droits réservés</p>
         </footer>
+        
+        <div style="color:#0f2747">
+            Livraison de Pokés frais chez vous ou au bureau à :<br>
+            Poke Boa Poissy, Poke Boa Orgeval, Poke Boa Carrières-sous-Poissy, Poke Boa Achères, Poke Boa Andrésy, Poke Boa Carrières-sous-Poissy, 
+            Poke Boa Chanteloup-les-Vignes, Poke Boa Conflans-Sainte-Honorine, Poke Boa Villennes-sur-Seine, Poke Boa Médan, Poke Boa Verneuil-sur-Seine, 
+            Poke Boa Vernouillet, Poke Boa Triel-sur-Seine, Poke Boa Orgeval, Poke Boa Morainvilliers, Poke Boa Chambourcy, Poke Boa Aigremont, Poke Boa Le Pecq, 
+            Poke Boa Saint-Germain-en-Laye
+        </div>
     </div>
 
     <script src="script.js?v=1" type="text/javascript"></script>
