--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
 
     <div class="container">
         <header>
-            <h1>POKE BOA POISSY</h1>
+            <h1>POKE BOA</h1>
             <p class="tagline">Savourez l'authenticité hawaïenne à Poissy</p>
         </header>
         
         <section class="main-content">
             <p class="description">
-                Bienvenue chez Poke Boa, votre nouvelle destination gourmande à Poissy pour des poké bowls frais, sains et délicieux. Notre concept unique associe les saveurs traditionnelles hawaïennes à une touche créative qui ravira vos papilles.
+                Bienvenue chez Poke Boa Poissy, votre nouvelle destination gourmande à Poissy pour des poké bowls frais, sains et délicieux. Notre concept unique associe les saveurs traditionnelles hawaïennes à une touche créative qui ravira vos papilles.
             </p>
             <p><a href="https://poke-boa.marketplace.dood.com/fr/shops/poke-bowl/poke-boa" class="cta-button">COMMANDER EN DIRECT</a></p><br>
             <p><a href="https://deliveroo.fr/fr/menu/paris/poissy/pokeboa-14-rue-de-la-gare" class="cta-button" target="_blank" style="display:none">COMMANDER SUR DELIVEROO</a></p>
