--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <a href="https://www.instagram.com/poke_boa"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.tiktok.com/@pok.bowl0"><i class="fab fa-tiktok"></i></a>
             </div>
-            <p>&copy; 2025 Poke Boa - Tous droits réservés</p>
+            <p>&copy; 2025 Poke Boa - Tous droits réservés - <a href="https://onylab.com" title="Applications pour les restaurants">Made By OnyLab.com</a></p>
         </footer>
         
         <div style="color:#0f2747">
