add google review link

--- a/r/index.html
+++ b/r/index.html
@@ -98,7 +98,7 @@
 			<p>Merci</p>
 			<p>⭐⭐⭐⭐⭐</p>
 			<div class="links">		
-				<a id="link-gmb" class="link" href="https://share.google/aGfePn62D5pIpecBL" target="_blank">
+				<a id="link-gmb" class="link" href="https://g.page/r/CX6BQoI4zCDFEBM/review" target="_blank">
 					<i>&nbsp;</i>Partagez votre avis sur Google
 				</a>
 				<a id="link-ubereats" class="link" href="https://www.ubereats.com/fr/store/pokeboa/mZykcx0MXmqgXuPijydJeA" target="_blank">
