--- a/r/up.html
+++ b/r/up.html
@@ -25,9 +25,11 @@
     </div>
 
     <div class="links">
-        <a id="gmb-location" class="link" href="https://share.google/aGfePn62D5pIpecBL" target="_blank"><i>&nbsp;</i>Google</a>
+        <a id="gmb-location" class="link" href="https://g.page/r/CX6BQoI4zCDFEBM/review" target="_blank"><i>&nbsp;</i>Google</a>
 		
-        <a id="fb" class="link" href="https://www.ubereats.com/fr/store/pokeboa/mZykcx0MXmqgXuPijydJeA" target="_blank"><i>&nbsp;</i>Uber Eats</a>
+        <a id="uber" class="link" href="https://www.ubereats.com/fr/store/pokeboa/mZykcx0MXmqgXuPijydJeA" target="_blank"><i>&nbsp;</i>Uber Eats</a>
+        
+        <a id="deliveroo" class="link" href="https://deliveroo.fr/fr/menu/paris/poissy/pokeboa-14-rue-de-la-gare" target="_blank"><i>&nbsp;</i>Deliveroo</a>
     </div>
     <br />
 	<div>
