--- a/r/index.html
+++ b/r/index.html
@@ -101,6 +101,9 @@
 				<a id="link-gmb" class="link" href="https://g.page/r/CX6BQoI4zCDFEBM/review" target="_blank">
 					<i>&nbsp;</i>Partagez votre avis sur Google
 				</a>
+				<a id="link-tripadvisor" class="link" href="https://www.tripadvisor.fr/UserReviewEdit-g562719-d33735158-Poke_BOA_Poissy-Poissy_Yvelines_Ile_de_France.html" target="_blank">
+					<i>&nbsp;</i>Partagez votre avis sur TripAdvisor
+				</a>
 				<a id="link-ubereats" class="link" href="https://www.ubereats.com/fr/store/pokeboa/mZykcx0MXmqgXuPijydJeA" target="_blank">
 					<i>&nbsp;</i>Partagez votre avis sur Uber Eats
 				</a>
